--- a/gen_password_string.yaml
+++ b/gen_password_string.yaml
@@ -14,4 +14,4 @@
   tasks:
   - name: Encrypt password string as a shadow
     debug:
-      msg: "password: {{ my_password }}"
+      msg: "password: '{{ my_password }}'"
